tests/snapshots/examples_fixtures/aether__bench_reuse_blocked.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/bench_reuse_blocked.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/aether/bench_reuse_blocked.flx:45:37
   |
45 |     print("blocked: result head = #{first(mapped)}")
   |                                     ^^^^^

Hint:
  Define it first: let first = ...;
== stdout ==
<not executed>
